--- a/core_workshop/frontend/package.json
+++ b/core_workshop/frontend/package.json
@@ -12,9 +12,29 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@hookform/resolvers": "^3.6.0",
+    "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.21",
+    "@mui/x-data-grid": "^7.8.0",
+    "@react-hook/debounce": "^4.0.0",
+    "@reduxjs/toolkit": "^2.2.6",
+    "@types/faker": "5.5.3",
+    "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.7.2",
+    "chart.js": "^4.4.3",
+    "copy-to-clipboard": "^3.3.3",
+    "dayjs": "^1.11.11",
+    "faker": "5.5.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.0",
+    "react-number-format": "^5.4.0",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.24.0",
+    "redux": "^5.0.1",
+    "url-join": "^5.0.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
