--- a/core_workshop/frontend/tsconfig.app.json
+++ b/core_workshop/frontend/tsconfig.app.json
@@ -21,7 +21,18 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    "baseUrl": "src",
+    "paths": {
+      "@/*": ["./src/*"],
+      "@/components/*": ["components/*"],
+      "@/types/*": ["types/*"],
+      "@/utils/*": ["utils/*"],
+      "@/store/*": ["store/*"],
+      "@/router/*": ["router/*"],
+      "@/assets/*": ["assets/*"]
+    }
   },
   "include": ["src"]
 }
