--- a/core_workshop/frontend/.env.production
+++ b/core_workshop/frontend/.env.production
@@ -1,5 +1,6 @@
 VITE_IS_PRODUCTION=1
 VITE_VERSION=1.0
+VITE_APP_NAME=React + .NET8 Workshop
 # VITE_NODE_URL=backend:8081 // for docker-compose
 VITE_NODE_URL=http://localhost:8081
 PORT=3000
