--- a/core_workshop/backend/appsettings.Development.json
+++ b/core_workshop/backend/appsettings.Development.json
@@ -3,7 +3,7 @@
     "ConnectionSQLServer": "Server=localhost,1433;user id=sa; password=Mflv[Mflv[; Database=demopos; TrustServerCertificate=True; MultiSubnetFailover=True"
   },
   "JwtSettings": {
-    "SecretKey": "CodeMobiles-DotNetCore",
+    "SecretKey": "CodeMobiles-DotNetCoreCodeMobiles-DotNetCoreCodeMobiles-DotNetCore",
     "Issuer": "CodeMobiles Ltd",
     "Audience": "http://codemobiles.com",
     "Expire": "30"
