--- a/core_workshop/frontend/.env
+++ b/core_workshop/frontend/.env
@@ -1,5 +1,5 @@
 VITE_IS_PRODUCTION=0
 VITE_APP_NAME=cmPOS - SERA STACK WORKSHOP
 VITE_VERSION=1.2
-VITE_NODE_URL=https://localhost:8081
+VITE_NODE_URL=http://localhost:8082
 PORT=3000
